# mvsdk

./: CMakeLists.txt  README.md
code/: CMakeLists.txt  mv_setup.h.in
code/api/: mvapi.h
code/cgame/: CMakeLists.txt  animtable.h  cg_consolecmds.c  cg_draw.c  cg_drawtools.c  cg_effects.c  cg_ents.c  cg_event.c  cg_info.c  cg_local.h  cg_localents.c  cg_main.c  cg_marks.c  cg_multiversion.c  cg_multiversion.h  cg_newDraw.c  cg_players.c  cg_predict.c  cg_saga.c  cg_scoreboard.c  cg_servercmds.c  cg_snapshot.c  cg_syscalls.asm  cg_syscalls.c  cg_view.c  cg_weaponinit.c  cg_weapons.c  cgame.bat  cgame.q3asm
code/game/: CMakeLists.txt  ai_main.c  ai_util.c  ai_wpnav.c  animMappingTable.c  bg_lib.c  bg_lib.h  bg_local.h  bg_misc.c  bg_multiversion.c  bg_multiversion.h  bg_panimate.c  bg_pmove.c  bg_public.h  bg_saber.c  bg_slidemove.c  bg_weapons.h  g_active.c  g_arenas.c  g_bot.c  g_client.c  g_cmds.c  g_combat.c  g_items.c  g_local.h  g_main.c  g_mem.c  g_misc.c  g_missile.c  g_mover.c  g_multiversion.c  g_multiversion_syscalls.c  g_multiversion_syscalls.h  g_saga.c  g_session.c  g_spawn.c  g_svcmds.c  g_syscalls.asm  g_syscalls.c  g_trigger.c  (+10 more)
code/ui/: CMakeLists.txt  keycodes.h  menudef.h  ui.bat  ui.q3asm  ui_atoms.c  ui_force.c  ui_local.h  ui_main.c  ui_multiversion.c  ui_multiversion.h  ui_multiversion_syscalls.c  ui_multiversion_syscalls.h  ui_players.c  ui_public.h  ui_shared.c  ui_shared.h  ui_syscalls.asm  ui_syscalls.c
tools/: CMakeLists.txt
tools/asm/: CMakeLists.txt  q3asm.c
tools/cpp/: CMakeLists.txt
tools/lcc/: CMakeLists.txt
tools/qcommon/: q_platform.h
tools/rcc/: CMakeLists.txt  dagcheck.c
